Actualizo index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mi proyecto</title>
+    <link rel="stylesheet" href="global.css">
 </head>
 <body>
+    <header> 
+        <h1> Hola, soy Rodrigo Aguirre </h1> 
+        <h4> Tecnicatura Superior en Desarrollo de software </h4>
+    </header>
+    <nav>
+    <ul>
+        <li><a href="#Inicio">Inicio</li>
+        <li><a href="#presentacion">Presentación</a></li>
+        <li><a href="#hobbies">Mis Hobbies</a></li>
+        <li><a href="#Galeria">Galeria</a></li>
+
+    </ul>
+</nav>
+
+    <main>
     
+        <section id="presentacion" class="Presentacion">
+            <h2>Mi presentacion </h2>
+            <p>  Soy una persona curiosa, creativa y en constante aprendizaje. Actualmente estoy dando mis primeros pasos en el mundo del desarrollo web y esta página es parte de mi proyecto inicial.</p>
+        <article>
+        </article>
+        </section>
+
+        <section id="hobbies" class="Hobbies">
+            <h2> Mis hobbies </h2>
+        <p> En mi tiempo libre disfruto mucho de andar en bicicleta, una actividad que me conecta con el aire libre. También voy al aeroclub a volar de vez en cuando, una experiencia que me da libertad y emoción. Otra de mis pasiones es la fotografía de paisajes, ya que me gusta capturar momentos y escenarios de los recorridos que hago. Me fascinan los trenes y suelo dedicar tiempo a observarlos y recorrer estaciones. Además, practico herrería.</p>
+
+        </section>
+
+    </main>
+    <footer class="site-footer">
+        © 2025 Rodrigo Aguirre  Todos los derechos reservados.
+    </footer>
 </body>
 </html>
 
